fixed preview text overlapping content

--- a/lms/static/sass/_discussion.scss
+++ b/lms/static/sass/_discussion.scss
@@ -55,7 +55,7 @@
 @mixin discussion-wmd-preview {
   width: 100%;
   min-height: 40px;
-  padding: 10px;
+  padding: 25px 20px 10px 20px;
   box-sizing: border-box;
   border: 1px solid #aaa;
   border-top: none;
@@ -388,7 +388,7 @@ body.discussion {
       width: 100%;
       //height: 50px;
       margin-top: -1px;
-      padding: 10px;
+      padding: 25px 20px 10px 20px;
       box-sizing: border-box;
       border: 1px solid #333;
       border-radius: 0 0 3px 3px;
